# neuro-arg.github.io

./: README.md  hugo.toml  shell.nix
.github/workflows/: hugo.yml
content/: about.md
content/posts/: candles.md  filtered.md  hello-world.md  meaning-of-life.md  numbers.md  numbers2.md  public-static-void.md  soundcloud.md  study.md
layouts/posts/: single.html
rust/: Cargo.toml  build.sh  shell.nix  solver.py
rust/src/: lib.rs
static/: toolbox.html  toolbox.js
static/rust/: neuro_arg_wasm.js  neuro_arg_wasm_bg.wasm
static/soundcloud/: profile.json
static/youtube/: IRzyqcKljxw.json  OiKrYrbs3Qs.json  giJI-TDbO5k.json  x4l5ckrtbAc.json  ymYFqNUt05g.json  zMlH7RH6psw.json
static/youtube/4j5oDzRiXUA/: 0.json  1.json  2.json
static/youtube/wc-QCoMm4J8/: 0.json  1.json
